--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This repository contains all flutter challenges I will be attempted while doing the Anjela Yu's Complete Flutter Bootcamp with Dart course.
+This repository contains all flutter challenges I attempted while doing the Anjela Yu's Complete Flutter Bootcamp with Dart course.
